# WordNet

./: .gitignore  BUILD.md  CMakeLists.txt  INSTALL  Makefile  README  ROADMAP.md  conanfile.py  config.h  config.status
.github/workflows/: README.md  ci.yml  continuous-release.yml  release.yml
_codeql_build_dir/: Makefile
_codeql_build_dir/lib/: Makefile
_codeql_build_dir/src/: Makefile
dict/: Makefile
diy-ai/: CMakeLists.txt  Makefile  README.md  chat.c  chat_strings.json  json_extract.cpp  json_extract.h  meaning.c  wn-cache  wn-cache.c  wn-chat  wn-meaning
diy-ai/lib/: Makefile
doc/: Makefile
doc/html/: Makefile
doc/man/: Makefile
doc/pdf/: Makefile
doc/ps/: Makefile
include/: Makefile  wn.h
include/tk/: Makefile
lib/: CMakeLists.txt  Makefile  binsrch.c  morph.c  search.c  wnutil.c
lib/.deps/: libWN_a-binsrch.Po  libWN_a-morph.Po  libWN_a-search.Po  libWN_a-wnhelp.Po  libWN_a-wnrtl.Po  libWN_a-wnutil.Po
lib/wnres/: Makefile
src/: CMakeLists.txt  Makefile  stubs.c  tkAppInit.c  wn.c
